ProjetoBase/compilador.output
Nonterminals useless in grammar

    lista_expressoes
    chama_proc
    desvio
    com_composto
    com_condicional
    com_repetitivo


Terminals unused in grammar

    LABEL
    TYPE
    ARRAY
    OF
    PROCEDURE
    FUNCTION
    GOTO
    IF
    THEN
    ELSE
    WHILE
    DO
    NOT


Rules useless in grammar

   51 lista_expressoes: lista_expressoes VIRGULA expressao
   52                 | expressao

   53 chama_proc: ε

   54 desvio: ε

   55 com_composto: ε

   56 com_condicional: ε

   57 com_repetitivo: ε


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 bloco: parte_declara_vars $@2 comando_composto

    5 parte_declara_vars: var

    6 $@3: ε

    7 var: $@3 VAR declara_vars
    8    | ε

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@4: ε

   12 $@5: ε

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   14 tipo: IDENT

   15 lista_id_var: lista_id_var VIRGULA IDENT
   16             | IDENT

   17 lista_idents: lista_idents VIRGULA IDENT
   18             | IDENT

   19 comando_composto: T_BEGIN comandos T_END

   20 comandos: comandos comando
   21         | comando

   22 comando: NUM DOIS_PONTOS comando_sem_rotulo
   23        | comando_sem_rotulo

   24 comando_sem_rotulo: atribuicao

   25 $@6: ε

   26 $@7: ε

   27 atribuicao: IDENT $@6 ATRIBUICAO expressao $@7 PONTO_E_VIRGULA

   28 expressao: expressao_simples
   29          | expressao_simples relacao expressao_simples

   30 expressao_simples: termos_encadeados
   31                  | SOMA termos_encadeados
   32                  | SUBTRAI termos_encadeados

   33 termos_encadeados: termos_encadeados SOMA termo
   34                  | termos_encadeados SUBTRAI termo
   35                  | termos_encadeados OR termo
   36                  | termo

   37 termo: termo MULT fator
   38      | termo DIV fator
   39      | termo AND fator
   40      | fator

   41 fator: variavel
   42      | numero

   43 variavel: IDENT

   44 numero: NUM

   45 relacao: IGUAL
   46        | DIFERE
   47        | MENOR
   48        | MENOR_IGUAL
   49        | MAIOR
   50        | MAIOR_IGUAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    LABEL (259)
    ABRE_PARENTESES (260) 2
    FECHA_PARENTESES (261) 2
    TYPE (262)
    ARRAY (263)
    OF (264)
    PROCEDURE (265)
    FUNCTION (266)
    GOTO (267)
    IF (268)
    THEN (269)
    ELSE (270)
    WHILE (271)
    DO (272)
    SOMA (273) 31 33
    SUBTRAI (274) 32 34
    MULT (275) 37
    DIV (276) 38
    AND (277) 39
    OR (278) 35
    NOT (279)
    IGUAL (280) 45
    DIFERE (281) 46
    MENOR (282) 47
    MENOR_IGUAL (283) 48
    MAIOR (284) 49
    MAIOR_IGUAL (285) 50
    VIRGULA (286) 15 17
    PONTO_E_VIRGULA (287) 2 13 27
    DOIS_PONTOS (288) 13 22
    PONTO (289) 2
    T_BEGIN (290) 19
    T_END (291) 19
    VAR (292) 7
    IDENT (293) 2 14 15 16 17 18 27 43
    ATRIBUICAO (294) 27
    NUM (295) 22 44


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    programa (42)
        on left: 2
        on right: 0
    $@1 (43)
        on left: 1
        on right: 2
    bloco (44)
        on left: 4
        on right: 2
    $@2 (45)
        on left: 3
        on right: 4
    parte_declara_vars (46)
        on left: 5
        on right: 4
    var (47)
        on left: 7 8
        on right: 5
    $@3 (48)
        on left: 6
        on right: 7
    declara_vars (49)
        on left: 9 10
        on right: 7 9
    declara_var (50)
        on left: 13
        on right: 9 10
    $@4 (51)
        on left: 11
        on right: 13
    $@5 (52)
        on left: 12
        on right: 13
    tipo (53)
        on left: 14
        on right: 13
    lista_id_var (54)
        on left: 15 16
        on right: 13 15
    lista_idents (55)
        on left: 17 18
        on right: 2 17
    comando_composto (56)
        on left: 19
        on right: 4
    comandos (57)
        on left: 20 21
        on right: 19 20
    comando (58)
        on left: 22 23
        on right: 20 21
    comando_sem_rotulo (59)
        on left: 24
        on right: 22 23
    atribuicao (60)
        on left: 27
        on right: 24
    $@6 (61)
        on left: 25
        on right: 27
    $@7 (62)
        on left: 26
        on right: 27
    expressao (63)
        on left: 28 29
        on right: 27
    expressao_simples (64)
        on left: 30 31 32
        on right: 28 29
    termos_encadeados (65)
        on left: 33 34 35 36
        on right: 30 31 32 33 34 35
    termo (66)
        on left: 37 38 39 40
        on right: 33 34 35 36 37 38 39
    fator (67)
        on left: 41 42
        on right: 37 38 39 40
    variavel (68)
        on left: 43
        on right: 41
    numero (69)
        on left: 44
        on right: 42
    relacao (70)
        on left: 45 46 47 48 49 50
        on right: 29


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   18 lista_idents: IDENT •

    $default  reduce using rule 18 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   17 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   17 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    T_BEGIN   reduce using rule 8 (var)
    $default  reduce using rule 6 ($@3)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    $@3                 go to state 16


State 12

   17 lista_idents: lista_idents VIRGULA IDENT •

    $default  reduce using rule 17 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 17


State 14

    4 bloco: parte_declara_vars • $@2 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 18


State 15

    5 parte_declara_vars: var •

    $default  reduce using rule 5 (parte_declara_vars)


State 16

    7 var: $@3 • VAR declara_vars

    VAR  shift, and go to state 19


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 18

    4 bloco: parte_declara_vars $@2 • comando_composto

    T_BEGIN  shift, and go to state 20

    comando_composto  go to state 21


State 19

    7 var: $@3 VAR • declara_vars

    $default  reduce using rule 11 ($@4)

    declara_vars  go to state 22
    declara_var   go to state 23
    $@4           go to state 24


State 20

   19 comando_composto: T_BEGIN • comandos T_END

    IDENT  shift, and go to state 25
    NUM    shift, and go to state 26

    comandos            go to state 27
    comando             go to state 28
    comando_sem_rotulo  go to state 29
    atribuicao          go to state 30


State 21

    4 bloco: parte_declara_vars $@2 comando_composto •

    $default  reduce using rule 4 (bloco)


State 22

    7 var: $@3 VAR declara_vars •
    9 declara_vars: declara_vars • declara_var

    IDENT     reduce using rule 11 ($@4)
    $default  reduce using rule 7 (var)

    declara_var  go to state 31
    $@4          go to state 24


State 23

   10 declara_vars: declara_var •

    $default  reduce using rule 10 (declara_vars)


State 24

   13 declara_var: $@4 • lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 32

    lista_id_var  go to state 33


State 25

   27 atribuicao: IDENT • $@6 ATRIBUICAO expressao $@7 PONTO_E_VIRGULA

    $default  reduce using rule 25 ($@6)

    $@6  go to state 34


State 26

   22 comando: NUM • DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  shift, and go to state 35


State 27

   19 comando_composto: T_BEGIN comandos • T_END
   20 comandos: comandos • comando

    T_END  shift, and go to state 36
    IDENT  shift, and go to state 25
    NUM    shift, and go to state 26

    comando             go to state 37
    comando_sem_rotulo  go to state 29
    atribuicao          go to state 30


State 28

   21 comandos: comando •

    $default  reduce using rule 21 (comandos)


State 29

   23 comando: comando_sem_rotulo •

    $default  reduce using rule 23 (comando)


State 30

   24 comando_sem_rotulo: atribuicao •

    $default  reduce using rule 24 (comando_sem_rotulo)


State 31

    9 declara_vars: declara_vars declara_var •

    $default  reduce using rule 9 (declara_vars)


State 32

   16 lista_id_var: IDENT •

    $default  reduce using rule 16 (lista_id_var)


State 33

   13 declara_var: $@4 lista_id_var • DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   15 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      shift, and go to state 38
    DOIS_PONTOS  shift, and go to state 39


State 34

   27 atribuicao: IDENT $@6 • ATRIBUICAO expressao $@7 PONTO_E_VIRGULA

    ATRIBUICAO  shift, and go to state 40


State 35

   22 comando: NUM DOIS_PONTOS • comando_sem_rotulo

    IDENT  shift, and go to state 25

    comando_sem_rotulo  go to state 41
    atribuicao          go to state 30


State 36

   19 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 19 (comando_composto)


State 37

   20 comandos: comandos comando •

    $default  reduce using rule 20 (comandos)


State 38

   15 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  shift, and go to state 42


State 39

   13 declara_var: $@4 lista_id_var DOIS_PONTOS • tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 43

    tipo  go to state 44


State 40

   27 atribuicao: IDENT $@6 ATRIBUICAO • expressao $@7 PONTO_E_VIRGULA

    SOMA     shift, and go to state 45
    SUBTRAI  shift, and go to state 46
    IDENT    shift, and go to state 47
    NUM      shift, and go to state 48

    expressao          go to state 49
    expressao_simples  go to state 50
    termos_encadeados  go to state 51
    termo              go to state 52
    fator              go to state 53
    variavel           go to state 54
    numero             go to state 55


State 41

   22 comando: NUM DOIS_PONTOS comando_sem_rotulo •

    $default  reduce using rule 22 (comando)


State 42

   15 lista_id_var: lista_id_var VIRGULA IDENT •

    $default  reduce using rule 15 (lista_id_var)


State 43

   14 tipo: IDENT •

    $default  reduce using rule 14 (tipo)


State 44

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo • $@5 PONTO_E_VIRGULA

    $default  reduce using rule 12 ($@5)

    $@5  go to state 56


State 45

   31 expressao_simples: SOMA • termos_encadeados

    IDENT  shift, and go to state 47
    NUM    shift, and go to state 48

    termos_encadeados  go to state 57
    termo              go to state 52
    fator              go to state 53
    variavel           go to state 54
    numero             go to state 55


State 46

   32 expressao_simples: SUBTRAI • termos_encadeados

    IDENT  shift, and go to state 47
    NUM    shift, and go to state 48

    termos_encadeados  go to state 58
    termo              go to state 52
    fator              go to state 53
    variavel           go to state 54
    numero             go to state 55


State 47

   43 variavel: IDENT •

    $default  reduce using rule 43 (variavel)


State 48

   44 numero: NUM •

    $default  reduce using rule 44 (numero)


State 49

   27 atribuicao: IDENT $@6 ATRIBUICAO expressao • $@7 PONTO_E_VIRGULA

    $default  reduce using rule 26 ($@7)

    $@7  go to state 59


State 50

   28 expressao: expressao_simples •
   29          | expressao_simples • relacao expressao_simples

    IGUAL        shift, and go to state 60
    DIFERE       shift, and go to state 61
    MENOR        shift, and go to state 62
    MENOR_IGUAL  shift, and go to state 63
    MAIOR        shift, and go to state 64
    MAIOR_IGUAL  shift, and go to state 65

    $default  reduce using rule 28 (expressao)

    relacao  go to state 66


State 51

   30 expressao_simples: termos_encadeados •
   33 termos_encadeados: termos_encadeados • SOMA termo
   34                  | termos_encadeados • SUBTRAI termo
   35                  | termos_encadeados • OR termo

    SOMA     shift, and go to state 67
    SUBTRAI  shift, and go to state 68
    OR       shift, and go to state 69

    $default  reduce using rule 30 (expressao_simples)


State 52

   36 termos_encadeados: termo •
   37 termo: termo • MULT fator
   38      | termo • DIV fator
   39      | termo • AND fator

    MULT  shift, and go to state 70
    DIV   shift, and go to state 71
    AND   shift, and go to state 72

    $default  reduce using rule 36 (termos_encadeados)


State 53

   40 termo: fator •

    $default  reduce using rule 40 (termo)


State 54

   41 fator: variavel •

    $default  reduce using rule 41 (fator)


State 55

   42 fator: numero •

    $default  reduce using rule 42 (fator)


State 56

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 73


State 57

   31 expressao_simples: SOMA termos_encadeados •
   33 termos_encadeados: termos_encadeados • SOMA termo
   34                  | termos_encadeados • SUBTRAI termo
   35                  | termos_encadeados • OR termo

    SOMA     shift, and go to state 67
    SUBTRAI  shift, and go to state 68
    OR       shift, and go to state 69

    $default  reduce using rule 31 (expressao_simples)


State 58

   32 expressao_simples: SUBTRAI termos_encadeados •
   33 termos_encadeados: termos_encadeados • SOMA termo
   34                  | termos_encadeados • SUBTRAI termo
   35                  | termos_encadeados • OR termo

    SOMA     shift, and go to state 67
    SUBTRAI  shift, and go to state 68
    OR       shift, and go to state 69

    $default  reduce using rule 32 (expressao_simples)


State 59

   27 atribuicao: IDENT $@6 ATRIBUICAO expressao $@7 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 74


State 60

   45 relacao: IGUAL •

    $default  reduce using rule 45 (relacao)


State 61

   46 relacao: DIFERE •

    $default  reduce using rule 46 (relacao)


State 62

   47 relacao: MENOR •

    $default  reduce using rule 47 (relacao)


State 63

   48 relacao: MENOR_IGUAL •

    $default  reduce using rule 48 (relacao)


State 64

   49 relacao: MAIOR •

    $default  reduce using rule 49 (relacao)


State 65

   50 relacao: MAIOR_IGUAL •

    $default  reduce using rule 50 (relacao)


State 66

   29 expressao: expressao_simples relacao • expressao_simples

    SOMA     shift, and go to state 45
    SUBTRAI  shift, and go to state 46
    IDENT    shift, and go to state 47
    NUM      shift, and go to state 48

    expressao_simples  go to state 75
    termos_encadeados  go to state 51
    termo              go to state 52
    fator              go to state 53
    variavel           go to state 54
    numero             go to state 55


State 67

   33 termos_encadeados: termos_encadeados SOMA • termo

    IDENT  shift, and go to state 47
    NUM    shift, and go to state 48

    termo     go to state 76
    fator     go to state 53
    variavel  go to state 54
    numero    go to state 55


State 68

   34 termos_encadeados: termos_encadeados SUBTRAI • termo

    IDENT  shift, and go to state 47
    NUM    shift, and go to state 48

    termo     go to state 77
    fator     go to state 53
    variavel  go to state 54
    numero    go to state 55


State 69

   35 termos_encadeados: termos_encadeados OR • termo

    IDENT  shift, and go to state 47
    NUM    shift, and go to state 48

    termo     go to state 78
    fator     go to state 53
    variavel  go to state 54
    numero    go to state 55


State 70

   37 termo: termo MULT • fator

    IDENT  shift, and go to state 47
    NUM    shift, and go to state 48

    fator     go to state 79
    variavel  go to state 54
    numero    go to state 55


State 71

   38 termo: termo DIV • fator

    IDENT  shift, and go to state 47
    NUM    shift, and go to state 48

    fator     go to state 80
    variavel  go to state 54
    numero    go to state 55


State 72

   39 termo: termo AND • fator

    IDENT  shift, and go to state 47
    NUM    shift, and go to state 48

    fator     go to state 81
    variavel  go to state 54
    numero    go to state 55


State 73

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA •

    $default  reduce using rule 13 (declara_var)


State 74

   27 atribuicao: IDENT $@6 ATRIBUICAO expressao $@7 PONTO_E_VIRGULA •

    $default  reduce using rule 27 (atribuicao)


State 75

   29 expressao: expressao_simples relacao expressao_simples •

    $default  reduce using rule 29 (expressao)


State 76

   33 termos_encadeados: termos_encadeados SOMA termo •
   37 termo: termo • MULT fator
   38      | termo • DIV fator
   39      | termo • AND fator

    MULT  shift, and go to state 70
    DIV   shift, and go to state 71
    AND   shift, and go to state 72

    $default  reduce using rule 33 (termos_encadeados)


State 77

   34 termos_encadeados: termos_encadeados SUBTRAI termo •
   37 termo: termo • MULT fator
   38      | termo • DIV fator
   39      | termo • AND fator

    MULT  shift, and go to state 70
    DIV   shift, and go to state 71
    AND   shift, and go to state 72

    $default  reduce using rule 34 (termos_encadeados)


State 78

   35 termos_encadeados: termos_encadeados OR termo •
   37 termo: termo • MULT fator
   38      | termo • DIV fator
   39      | termo • AND fator

    MULT  shift, and go to state 70
    DIV   shift, and go to state 71
    AND   shift, and go to state 72

    $default  reduce using rule 35 (termos_encadeados)


State 79

   37 termo: termo MULT fator •

    $default  reduce using rule 37 (termo)


State 80

   38 termo: termo DIV fator •

    $default  reduce using rule 38 (termo)


State 81

   39 termo: termo AND fator •

    $default  reduce using rule 39 (termo)
